--- a/templates/back/User/list.html.twig
+++ b/templates/back/User/list.html.twig
@@ -14,7 +14,7 @@
                     <div class="table-responsive">
                         <table class="table">
                             <thead class="text-info">
-                                <th>ID</th>
+{#                                <th>ID</th>#}
                                 <th>{{ 'Name'|trans }}</th>
                                 <th>{{ 'Last Name'|trans }}</th>
                                 <th>{{ 'Mother Last Name'|trans }}</th>
@@ -24,7 +24,7 @@
                             <tbody>
                             {% for user in users %}
                             <tr>
-                                <td>{{ user.id }}</td>
+{#                                <td>{{ user.id }}</td>#}
                                 <td>{{ user.name }}</td>
                                 <td>{{ user.lastName }}</td>
                                 <td>{{ user.motherLastName }}</td>
