--- a/templates/back/Video/list.html.twig
+++ b/templates/back/Video/list.html.twig
@@ -14,7 +14,7 @@
                     <div class="table-responsive">
                         <table class="table">
                             <thead class="text-info">
-                                <th>ID</th>
+{#                                <th>ID</th>#}
                                 <th>{{ 'Title'|trans }}</th>
                                 <th>{{ 'URL Video'|trans }}</th>
                                 <th>{{ 'Views'|trans }}</th>
@@ -23,7 +23,7 @@
                             <tbody>
                             {% for video in videos %}
                                 <tr>
-                                    <td>{{ video.id }}</td>
+{#                                    <td>{{ video.id }}</td>#}
                                     <td>{{ video.title }}</td>
                                     <td>{{ video.url }}</td>
                                     <td>{{ video.reproductions }}</td>
