--- a/templates/front/comunes/navbar.html.twig
+++ b/templates/front/comunes/navbar.html.twig
@@ -1,12 +1,68 @@
-<nav class="navbar navbar-light bg-light">
+{#<nav class="navbar navbar-light bg-light justify-content-center">#}
+{#    <form class="d-flex justify-content-center" method="post" action="{{ path('index_search') }}">#}
+{#        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">#}
+{#        <button class="btn btn-sm btn-outline-light" type="submit">Search</button>#}
+{#    </form>#}
+{#</nav>#}
+<nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ path('index') }}">
-            <img src="{{ asset('src/img/logo.jpg') }}" alt="" width="15%" class="d-inline-block align-top">
-
-        </a>
-{#        <form class="d-flex">#}
-{#            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
-{#            <button class="btn btn-outline-success" type="submit">Search</button>#}
-{#        </form>#}
+        <div class="navbar-wrapper">
+            <a class="navbar-brand" href="javascript:;"></a>
+        </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="navbar-toggler-icon icon-bar"></span>
+            <span class="navbar-toggler-icon icon-bar"></span>
+            <span class="navbar-toggler-icon icon-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center">
+            <form class="navbar-form"  method="post" action="{{ path('index_search') }}">
+                <div class="input-group no-border">
+                    <input type="text" value="" class="form-control" placeholder="Search...">
+                    <button type="submit" class="btn btn-white btn-round btn-just-icon">
+                        <i class="material-icons">search</i>
+                        <div class="ripple-container"></div>
+                    </button>
+                </div>
+            </form>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:;">
+{#                        <i class="material-icons">dashboard</i>#}
+                        <p class="d-lg-none d-md-block"></p>
+                    </a>
+                </li>
+{#                <li class="nav-item dropdown">#}
+{#                    <a class="nav-link" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
+{#                        <i class="material-icons">notifications</i>#}
+{#                        <span class="notification">5</span>#}
+{#                        <p class="d-lg-none d-md-block">#}
+{#                            Some Actions#}
+{#                        </p>#}
+{#                    </a>#}
+{#                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">#}
+{#                        <a class="dropdown-item" href="#">Mike John responded to your email</a>#}
+{#                        <a class="dropdown-item" href="#">You have 5 new tasks</a>#}
+{#                        <a class="dropdown-item" href="#">You're now friend with Andrew</a>#}
+{#                        <a class="dropdown-item" href="#">Another Notification</a>#}
+{#                        <a class="dropdown-item" href="#">Another One</a>#}
+{#                    </div>#}
+{#                </li>#}
+{#                <li class="nav-item dropdown">#}
+{#                    <a class="nav-link" href="javascript:;" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
+{#                        <i class="material-icons">person</i>#}
+{#                        <p class="d-lg-none d-md-block">#}
+{#                            Account#}
+{#                        </p>#}
+{#                    </a>#}
+{#                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">#}
+{#                        <a class="dropdown-item" href="#">Profile</a>#}
+{#                        <a class="dropdown-item" href="#">Settings</a>#}
+{#                        <div class="dropdown-divider"></div>#}
+{#                        <a class="dropdown-item" href="#">Log out</a>#}
+{#                    </div>#}
+{#                </li>#}
+            </ul>
+        </div>
     </div>
 </nav>
