--- a/templates/back/comunes/fotter.html.twig
+++ b/templates/back/comunes/fotter.html.twig
@@ -10,11 +10,7 @@
             </ul>
         </nav>
         <div class="copyright float-right">
-            &copy;
-            <script>
-                document.write(new Date().getFullYear())
-            </script>, made with by
-            <a href="#" target="_blank">Change</a> for a better web.
+            &copy; Elaborado por Change Producciones S.A. de C.V..
         </div>
         <!-- your footer here -->
     </div>
